[project]
name = "qlogicae-logis"
version = "1.1.0"
description = "The project orchestration tool for QLogicae projects"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Vaughn Cedric L. Araneta", email = "vaughncedriclipardoaraneta@gmail.com" }
]
maintainers = [
    { name = "Vaughn Cedric L. Araneta", email = "vaughncedriclipardoaraneta@gmail.com" }
]
keywords = ["qlogicae", "logis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
    "Topic :: Software Development",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Software Distribution",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
dependencies = []


[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "pytest-benchmark",
    "ruff",
    "mypy",
    "hatch",
    "twine",
    "memray",
    "scalene",
    "pympler"
]


[project.scripts]
qlogicae-logis = "qlogicae_logis.v1.cli.app:main"


[project.urls]
Homepage = "https://github.com/CedricDeVon/qlogicae-logis"
Repository = "https://github.com/CedricDeVon/qlogicae-logis"
Documentation = "https://github.com/CedricDeVon/qlogicae-logis"
Issues = "https://github.com/CedricDeVon/qlogicae-logis/issues"
Changelog = "https://github.com/CedricDeVon/qlogicae-logis/releases"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["./test/unit"]
python_files = ["test_*.py"]
addopts = "-ra"


[tool.coverage.run]
source = ["qlogicae_logis"]
branch = true


[tool.coverage.report]
show_missing = true
skip_covered = false


[tool.ruff]
target-version = "py314"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    ".output",
    "output",
    ".outputs",
    "outputs",
    ".dist",
    "dist",
    ".build",
    "build",
    ".pytest_cache",
    ".ruff_cache",
    ".mypy_cache",
    ".tox",
    ".nox",
    ".idea",
    ".vscode",
]

[tool.ruff.lint]
select = [    
    "E",
    "W", # pycodestyle    
    "F", # Pyflakes    
    "I", # isort    
    "UP", # pyupgrade    
    "B", # flake8-bugbear
    "PTH", # pathlib
]
ignore = [    
    "B008",
    "S607",    
    "S101", # allow assert statements    
    "S603", # allow subprocess usage
    "PLR2004", # allow magic values
]
fixable = ["ALL"]
unfixable = []


[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"
skip-magic-trailing-comma = false


[tool.hatch.envs.default.scripts]
typecheck ="""
    mypy
"""
lint = """
    ruff check . --fix
"""
format = """
    ruff format .
"""
deploy-check = """
    twine check ./output/build/*
"""
clean-build = """
    rm -rf ./output/build &&
    mkdir -p ./output/build
"""
clean-test = """
    rm -rf ./output/test &&
    mkdir -p ./output/test
"""
build = """
    hatch run clean-build &&
    hatch build &&
    mv dist/* ./output/build
"""
workflow-deploy-check = """
    hatch run build &&
    hatch run typecheck &&
    hatch run lint &&
    hatch run format &&
    hatch run deploy-check
"""
workflow-deploy = """
    hatch run build &&
    hatch run typecheck &&
    hatch run lint &&
    hatch run format &&
    twine upload ./output/build/* --config-file .pypirc --verbose
"""
workflow-test-unit = """
OUTPUT_PATH="output/test/unit/$(date -u +%Y%m%dT%H%M%S-%NZ)" &&
mkdir -p "$OUTPUT_PATH" &&
pytest -vv \
  --cov=qlogicae_logis \
  --cov-branch \
  --cov-report=term-missing \
  --cov-report=html:"$OUTPUT_PATH/html" \
  --cov-report=xml:"$OUTPUT_PATH/coverage.xml" \
  --cov-report=json:"$OUTPUT_PATH/coverage.json" \
  --junitxml="$OUTPUT_PATH/junit.xml"
"""



# [tool.mypy]
# files = ["library"]
# strict = true
# python_version = "3.12"
# namespace_packages = true
# explicit_package_bases = true
# show_error_codes = true
# pretty = true
# color_output = true
# show_column_numbers = true
# show_error_context = true
